modifikasi button clear commit

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                             </div>
                             <div class="mx-5 mt-5">
                                 <button class="card-link btn btn-md btn-dark rounded-5 px-4">Contact</button>
-                                <a href="" class="card-link text-decoration-none fs-5">Download Cv <i class="fa-solid fa-download"></i></a>
+                                <a href="" class="card-link text-dark text-decoration-none fs-5">
+                                    Download Cv 
+                                    <i class="fa-solid fa-download"></i>
+                                </a>
                             </div>
                             <div class="mx-5 mt-5">
                                 <a class="card-link text-decoration-none" href="https://www.linkedin.com/in/rinaldi-rizqi-fauzi-bb779422a/">
